# mac-bench

./: .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SETUP.md  ignore-spelling-words.txt  pyproject.toml
.github/workflows/: job-coverage-comment.yml  job-prek.yml  job-test.yml  on-pr.yml
docs/: index.html  latest.html  latest.json  latest.md  vision-doorbell-example.html  vision-doorbell-example.json  vision-doorbell-example.md
docs/face-recognition/: index.html  latest.json
docs/images/: CREDITS.md  manifest.json
docs/vision/: index.html
examples/images/: CREDITS.md  manifest.json
examples/profiles/: brief.json  detailed.json
examples/prompts/: doorbell-person.txt
face_bench/: __init__.py  benchmark.py  cli.py  dataset.py  reporting.py
mac_bench/: __init__.py  benchmark.py  cli.py  core.py  entities.py  lm_studio.py  reporting.py
tests/: test_core.py  test_example.py
